correction padding element collapse

--- a/kasa/src/pages/houseDescription/houseDescriptions.module.scss
+++ b/kasa/src/pages/houseDescription/houseDescriptions.module.scss
@@ -182,7 +182,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 24px;
-    gap: 20px;
+    gap: 15px;
 
     /***********Responvive ****************
     ***************************************/
